--- a/foot/src/main/resources/templates/xdm/code/codeXdmList.html
+++ b/foot/src/main/resources/templates/xdm/code/codeXdmList.html
@@ -6,7 +6,7 @@
 	<form name="formList" id="formList" method="post" autocomplete="off">
 		<input type="hidden" name="thisPage" th:value="${vo.thisPage}" default="1"/>
 		<input type="hidden" id="rowNumToShow" name="rowNumToShow" th:value="${vo.rowNumToShow}"/>
-
+		<input type="hidden" name="cdSeq">
     <section class="content">
         <div class="container-fluid">
             
@@ -95,7 +95,7 @@
                                                     <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
                                                   </svg>
                                             </button>
-                                            <button type="button" class="btn btn-default waves-effect">
+                                            <button type="button" class="btn btn-default waves-effect" id="btnReset">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
                                                     <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z"/>
                                                     <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466"/>
@@ -166,7 +166,8 @@
                                             <td th:text="${list.ifcgName}"></td>
                                             <td th:text="${list.cdSeq}"></td>
                                             <td></td>
-                                            <td th:text="${list.ifcdName}"></td>
+                                            <!-- <td th:text="${list.ifcdName}"></td> -->
+                                            <td><a href="javascript:void(0);" th:text="${list.ifcdName}" th:attr="onclick=|goForm('${list.cdSeq}')|"></a></td>
                                             <td></td>
                                            
                                         </tr>
@@ -209,11 +210,11 @@
                                       </svg>
                                     </a>
                                     <!-- 리스트 추가 버트 -->
-                                <a class="btn btn-primary" th:href="@{/code/CodeForm}" role="button" style="float: right; margin-right:  5px;">
+                                <button class="btn btn-primary" type="button" style="float: right; margin-right:  5px;" id="btnForm">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
                                       </svg>
-                                    </a>
+                                    </button>
                                 <a class="btn btn-success" href="" role="button" style="float: right; margin-right:  5px;">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-excel" viewBox="0 0 16 16">
                                         <path d="M5.884 6.68a.5.5 0 1 0-.768.64L7.349 10l-2.233 2.68a.5.5 0 0 0 .768.64L8 10.781l2.116 2.54a.5.5 0 0 0 .768-.641L8.651 10l2.233-2.68a.5.5 0 0 0-.768-.64L8 9.219l-2.116-2.54z"/>
@@ -308,6 +309,9 @@
     
     </script>
          <script type="text/javascript">
+         document.getElementById("btnReset").onclick = function () {
+   		  window.location.href = "/code/codeList";
+   		};
 	 /* 검색하기 */
 	 document.getElementById("btnSearch").onclick = function () {
 		 
@@ -329,7 +333,7 @@
 		 
 		// 데이터 값이 있을 경우 폼 제출
          if (isValid) {
-        	 form.action = "/codeGroup/codeGroupList";
+        	 form.action = "/code/codeList";
  	        form.submit(); 
          }  
 	        
@@ -341,6 +345,19 @@
 	       form.action = "/code/codeList";
            form.submit();
      }
+	  
+	  let seq = document.querySelector("input[name=cdSeq]");	
+	  
+	  document.getElementById("btnForm").onclick = function () {
+		    goForm(0);
+		}
+
+
+		goForm = function (keyValue) {
+		    seq.value = keyValue;
+		    form.action = "/code/CodeForm";
+		    form.submit();
+		}
 	    
     
     </script> 
