--- a/foot/src/main/resources/templates/xdm/codegroup/codeGroupXdmList.html
+++ b/foot/src/main/resources/templates/xdm/codegroup/codeGroupXdmList.html
@@ -6,6 +6,8 @@
 	<form name="formList" id="formList" method="post" autocomplete="off">
 		<input type="hidden" name="thisPage" th:value="${vo.thisPage}" default="1"/>
 		<input type="hidden" id="rowNumToShow" name="rowNumToShow" th:value="${vo.rowNumToShow}"/>
+		<input type="hidden" name="cdgSeq">
+		
     <section class="content">
         <div class="container-fluid">
             
@@ -156,13 +158,15 @@
                                     	</tr>
                                         <tr th:if="${!#lists.isEmpty(list)}" th:each="list : ${list}">
                                             <td>
+                                            	
                                                 <input class="form-check-input row-checkbox" th:id="${list.cdgSeq}" type="checkbox">
                                                 <label class="form-check-label" th:for="${list.cdgSeq}"></label>
                                             </td>
                                             <td th:text="${vo.totalRows - ((vo.thisPage - 1) * vo.rowNumToShow + listStat.index)}"></td>
                                             <td th:text="${list.usedOrNot}"></td>
                                             <td th:text="${list.cdgSeq}"></td>
-                                            <td th:text="${list.ifcgName}"></td>
+                                            
+                                            <td><a href="javascript:void(0);" th:text="${list.ifcgName}" th:attr="onclick=|goForm('${list.cdgSeq}')|"></a></td>
                                             <td></td>
                                             <td th:text="${list.xifcdSeqCount}"></td>
                                             <td></td>
@@ -199,17 +203,20 @@
                                     <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
                                   </svg>
                                 </a>
-                                <a role="button" class="btn btn-danger" href="" id="uelete">
+                                <!-- 업데이트 삭제 버튼 -->
+                                <button type="button" class="btn btn-danger" id="uelete">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
                                         <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
                                         <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
                                       </svg>
-                                    </a>
-                                <a class="btn btn-primary" th:href="@{/codeGroup/codeGroupForm}" role="button" style="float: right; margin-right:  5px;">
+                                    </button>
+                                    
+                               
+                                <button  id="btnForm" class="btn btn-primary" type="button" style="float: right; margin-right:  5px;" >
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
                                       </svg>
-                                    </a>
+                                    </button >
                                 <a class="btn btn-success" href="" role="button" style="float: right; margin-right:  5px;">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-excel" viewBox="0 0 16 16">
                                         <path d="M5.884 6.68a.5.5 0 1 0-.768.64L7.349 10l-2.233 2.68a.5.5 0 0 0 .768.64L8 10.781l2.116 2.54a.5.5 0 0 0 .768-.641L8.651 10l2.233-2.68a.5.5 0 0 0-.768-.64L8 9.219l-2.116-2.54z"/>
@@ -290,7 +297,7 @@
         });
               
     </script>
-    
+   
     
     <script type="text/javascript">
     	// 페이지네이션 자바 스크립
@@ -331,8 +338,7 @@
 	        
 	  };
 	  document.getElementById("btnReset").onclick = function () {
-		    form.action = "/codeGroup/codeGroupList";
-		    form.submit();
+		  window.location.href = "/codeGroup/codeGroupList";
 		};
 	  
 	    
@@ -343,6 +349,21 @@
 	        form.submit();
 	    }
     
+	    
+	    
+	    /* 폼화면 수정폼도 같이 사용하기 */
+	    let seq = document.querySelector("input[name=cdgSeq]");	
+	  
+	    document.getElementById("btnForm").onclick = function () {
+	        goForm(0);
+	    }
+
+
+	    goForm = function (keyValue) {
+	        seq.value = keyValue;
+	        form.action = "/codeGroup/codeGroupForm";
+	        form.submit();
+	    }
     </script> 
 </body>
 </html>
