--- a/foot/src/main/resources/templates/xdm/include/foter.html
+++ b/foot/src/main/resources/templates/xdm/include/foter.html
@@ -9,9 +9,9 @@
             
         </div>
     </section>
-    <script src="/xdm/template/master/scss/_modals.scss"></script>
+    <!-- <script src="/xdm/template/master/scss/_modals.scss"></script> -->
     	    <!-- Custom Js -->
-    <script src="/xdm/template/master/js/admin.js"></script>
+    <!-- <script src="/xdm/template/master/js/admin.js"></script> -->
     <script src="/xdm/template/master/js/pages/ui/modals.js"></script>
         <!-- Jquery Core Js -->
     <script src="/xdm/template/master/plugins/jquery/jquery.min.js"></script>
@@ -40,14 +40,15 @@
     <script src="/xdm/template/master/plugins/jquery-datatable/extensions/export/buttons.print.min.js"></script>
 
     <!-- Custom Js -->
-    <script src="/xdm/template/master/js/admin.js"></script>
-    <script src="/xdm/template/master/js/pages/tables/jquery-datatable.js"></script>
+    <!-- <script src="/xdm/template/master/js/pages/tables/jquery-datatable.js"></script> -->
 
     <!-- Demo Js -->
-    <script src="/xdm/template/master/js/demo.js"></script>
-
+    <!-- <script src="/xdm/template/master/js/demo.js"></script> -->
+	
+	    <!-- jquery  -->
+    <script src="/xdm/jquery/jquery-3.7.1.min.js"></script>
     <!--체크박스 전체 체크 단독 체크-->
-    <script>
+    <!-- <script>
         document.addEventListener("DOMContentLoaded", function () {
             const entireCheckbox = document.getElementById("entire");
             const rowCheckboxes = document.querySelectorAll(".row-checkbox");
@@ -66,6 +67,6 @@
                 });
             });
         });
-    </script>
+    </script> -->
 </body>
 </html>
