--- a/foot/src/main/resources/templates/xdm/include/head.html
+++ b/foot/src/main/resources/templates/xdm/include/head.html
@@ -8,10 +8,10 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <title>Basic Form Elements | Bootstrap Based Admin Template - Material Design</title>
-    <link rel="icon" href="/xdm/template/master/favicon.ico" type="image/x-icon">
+   
     
  
-
+	
     <!-- Bootstrap Core Css -->
     <link href="/xdm/template/master/plugins/bootstrap/css/bootstrap.css" rel="stylesheet">
 
@@ -25,9 +25,9 @@
     <link href="/xdm/template/master/plugins/jquery-datatable/skin/bootstrap/css/dataTables.bootstrap.css" rel="stylesheet">
 
     <!-- Custom Css -->
-    <link href="/xdm/template/master/css/style.css" rel="stylesheet">
+    <<link href="/xdm/template/master/css/style.css" rel="stylesheet"> 
 
-    <!-- AdminBSB Themes. You can choose a theme from css/themes instead of get all themes -->
+     
     <link href="/xdm/template/master/css/themes/all-themes.css" rel="stylesheet" />
     <!-- Favicon-->
     <link rel="icon" href="/xdm/template/master/favicon.ico" type="image/x-icon">
@@ -58,52 +58,16 @@
     <link href="/xdm/template/master/plugins/bootstrap-select/css/bootstrap-select.css" rel="stylesheet" />
 
     <!-- Custom Css -->
-    <link href="/xdm/template/master/css/style.css" rel="stylesheet">
+     <link href="/xdm/template/master/css/style.css" rel="stylesheet"> 
 
     <!-- AdminBSB Themes. You can choose a theme from css/themes instead of get all themes -->
     <link href="/xdm/template/master/css/themes/all-themes.css" rel="stylesheet" />
-   <style>
-		
-
-
-
-
-    </style>
+   
       
 </head>
 
 <body class="theme-red">
-    <!-- Page Loader -->
-    <div class="page-loader-wrapper">
-        <div class="loader">
-            <div class="preloader">
-                <div class="spinner-layer pl-red">
-                    <div class="circle-clipper left">
-                        <div class="circle"></div>
-                    </div>
-                    <div class="circle-clipper right">
-                        <div class="circle"></div>
-                    </div>
-                </div>
-            </div>
-            <p>Please wait...</p>
-        </div>
-    </div>
-    <!-- #END# Page Loader -->
-    <!-- Overlay For Sidebars -->
-    <div class="overlay"></div>
-    <!-- #END# Overlay For Sidebars -->
-    <!-- Search Bar -->
-    <div class="search-bar">
-        <div class="search-icon">
-            <i class="material-icons">search</i>
-        </div>
-        <input type="text" placeholder="START TYPING...">
-        <div class="close-search">
-            <i class="material-icons">close</i>
-        </div>
-    </div>
-    <!-- #END# Search Bar -->
+  
     <!-- Top Bar -->
     <nav class="navbar">
         <div class="container-fluid">
@@ -319,33 +283,27 @@
                     <img src="/xdm/template/master/images/user.png" width="48" height="48" alt="User" />
                 </div>
                 <div class="info-container">
-                    <div class="name" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">John Doe</div>
-                    <div class="email">john.doe@example.com</div>
+                    <div class="name" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">[[${session.sessNameXdm}]]</div>
+                    <div class="email">[[${session.sessIdXdm}]]</div>
                     <div class="btn-group user-helper-dropdown">
                         <i class="material-icons" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">keyboard_arrow_down</i>
                         <ul class="dropdown-menu pull-right">
-                            <li><a href="javascript:void(0);"><i class="material-icons">person</i>Profile</a></li>
+                            <!-- <li><a href="javascript:void(0);"><i class="material-icons">person</i>Profile</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="javascript:void(0);"><i class="material-icons">group</i>Followers</a></li>
                             <li><a href="javascript:void(0);"><i class="material-icons">shopping_cart</i>Sales</a></li>
                             <li><a href="javascript:void(0);"><i class="material-icons">favorite</i>Likes</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="javascript:void(0);"><i class="material-icons">input</i>Sign Out</a></li>
+                            <li role="separator" class="divider"></li> -->
+                             <li><a href="javascript:void(0);" id="btnSignout"><i class="material-icons"></i>로그아웃</a></li><!-- 로그아웃 -->
                         </ul>
                     </div>
                 </div>
             </div>
-            <!-- #User Info -->
+           ㅡ
             <!-- Menu -->
             <div class="menu">
                 <ul class="list">
-                    <li class="header">MAIN NAVIGATION</li>
-                    <li>
-                        <a href="/xdm/template/master/index.html">
-                            <i class="material-icons">home</i>
-                            <span>Home</span>
-                        </a>
-                    </li>
+                    
                     <li>
                         <a href="javascript:void(0);" class="menu-toggle">
                             <i class="material-icons"></i>
@@ -596,3 +554,39 @@
         </aside>
         <!-- #END# Right Sidebar -->
     </section>
+        <!-- jquery  -->
+<script src="/xdm/jquery/jquery-3.7.1.min.js"></script>
+    
+<script type="text/javascript">
+
+	const URL_SIGNIN_FORM_XDM = "/SigninAdimn" //로그인 주소
+	const URL_SIGNOUT_PROC_XDM = "/SignoutAdimn1" // 컨트롤로 사인 주소
+	
+	const URL_INDEX_VIEW_XDM = "/UserMemberList" //넘어갈 페이지
+
+
+	
+		$("#btnSignout").on("click", function(){
+			$.ajax({
+				async: true 
+				,cache: false
+				,type: "post"
+				,url: URL_SIGNOUT_PROC_XDM
+				,data: {}
+				,success: function(response) {
+					if(response.rt == "success") {
+						location.href = URL_SIGNIN_FORM_XDM;
+					} else {
+						// by pass
+					}
+				}
+				,error : function(jqXHR, textStatus, errorThrown){
+					alert("ajaxUpdate " + jqXHR.textStatus + " : " + jqXHR.errorThrown);
+				}
+			});
+		});
+	
+
+
+
+</script>
