--- a/foot/src/main/resources/templates/xdm/announcement/AnnouncementForm.html
+++ b/foot/src/main/resources/templates/xdm/announcement/AnnouncementForm.html
@@ -181,12 +181,13 @@
 		}
 		
 		//공지사항 등록일 검증
-		if (creationDate.value == ""){
-			creationDateError.innerText = "등록일 입력해주세요";
-			creationDate.focus();
-			isValid = false;
+		
+		if (!creationDate.value.match(/^\d{4}-\d{2}-\d{2}$/)) {
+		    creationDateError.innerText = "YYYY-MM-DD 형식으로 입력해주세요.";
+		    creationDate.focus();
+		    isValid = false;
 		} else {
-			creationDateError.innerText = "";
+		    creationDateError.innerText = "";
 		}
 		
 		//공지사항 내용 검증
