--- a/foot/src/main/resources/templates/xdm/codegroup/codeGroupXdmForm.html
+++ b/foot/src/main/resources/templates/xdm/codegroup/codeGroupXdmForm.html
@@ -5,6 +5,8 @@
 
 
 <form action="/codeGroup/codeGroupInst" method="post" id="form">
+<input type="hidden" name="cdgSeq" th:value="${vo.cdgSeq}">
+
     <section class="content">
         <div class="container-fluid">
             
@@ -22,19 +24,22 @@
             
                             </h2>
                             
+	
+								
+							
                         </div>
                         <div class="body">                            
                             <div class="row clearfix">
                                 <div class="col-sm-12">
                                     <div class="row clearfix">
                                         <div class="col-sm-3">
+                                        
                                             <h2 class="card-inside-title"><small>코드그룹 코드<span style="color: red;">*</span></small></h2>
-                                            <select class="form-control show-tick " disabled>
-                                                <option th:value="@{list.cdgSeq}" name="cdgSeq" id="cdgSeq">자동생성</option>
-                                                <!-- <option>10</option>
-                                                <option>20</option>
-                                                <option>30</option> -->
-                                            </select>
+                                             <select class="form-control show-tick " disabled>
+                                                <option th:value="${item?.cdgSeq}" name="cdgSeq" id="cdgSeq">자동생성</option>
+                                               
+                                            </select> 
+                                            <!-- <input type="text" id="cdgSeq" name="cdgSeq" th:value="${item?.cdgSeq}" maxlength="20" placeholder="자동생성" disabled /> -->
                                             
                                         </div>
                                         
@@ -51,7 +56,7 @@
                                             <div class="form-group">
                                                 <div class="form-line">
                                                     <h2 class="card-inside-title"><small>코드그룹 이름<span style="color: red;">*</span></small></h2>
-                                                    <input type="text" class="form-control" name="ifcgName" id="ifcgName" placeholder="한글,영대소문자,숫자" />
+                                                    <input type="text" class="form-control" name="ifcgName" id="ifcgName" th:value="${item?.ifcgName}"   placeholder="한글,영대소문자,숫자" />
                                                 </div>
                                             </div>
                                         </div>
@@ -65,7 +70,7 @@
                                         </div> 
                                     </div>
                                     <div class="row clearfix">
-                                        <div class="col-sm-3">
+                                        <!-- <div class="col-sm-3">
                                             <h2 class="card-inside-title"><small>사용여부<span style="color: red;">*</span></small></h2>
                                             <select class="form-control show-tick" id="usedOrNot" name="usedOrNot">
                                                 <option value="">사용</option>
@@ -74,7 +79,7 @@
                                                
                                             </select> 
                                               
-                                        </div>
+                                        </div> -->
                                         <!-- <div class="col-sm-3">
                                             <div class="form-group">
                                                 <div class="form-line">
@@ -107,8 +112,16 @@
                                                 <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
                                             </svg>
                                         </a> 
-                                       
-                                        <button  type="button" class="btn btn-primary" style="float: right;" id="btuSave" data-toggle="modal">
+	                                        &nbsp; &nbsp;
+                                        <!-- 업데이트 삭제 -->
+                                       <button type="button" class="btn btn-danger" id="btnUelete">
+	                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+	                                        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
+	                                        <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
+	                                      </svg>
+	                                    </button>
+	                                    
+                                        <button  type="button" class="btn btn-primary" style="float: right;" id="btnSubmit" data-toggle="modal">
                                             <svg  xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-database" viewBox="0 0 16 16">
                                                 <path d="M4.318 2.687C5.234 2.271 6.536 2 8 2s2.766.27 3.682.687C12.644 3.125 13 3.627 13 4c0 .374-.356.875-1.318 1.313C10.766 5.729 9.464 6 8 6s-2.766-.27-3.682-.687C3.356 4.875 3 4.373 3 4c0-.374.356-.875 1.318-1.313M13 5.698V7c0 .374-.356.875-1.318 1.313C10.766 8.729 9.464 9 8 9s-2.766-.27-3.682-.687C3.356 7.875 3 7.373 3 7V5.698c.271.202.58.378.904.525C4.978 6.711 6.427 7 8 7s3.022-.289 4.096-.777A5 5 0 0 0 13 5.698M14 4c0-1.007-.875-1.755-1.904-2.223C11.022 1.289 9.573 1 8 1s-3.022.289-4.096.777C2.875 2.245 2 2.993 2 4v9c0 1.007.875 1.755 1.904 2.223C4.978 15.71 6.427 16 8 16s3.022-.289 4.096-.777C13.125 14.755 14 14.007 14 13zm-1 4.698V10c0 .374-.356.875-1.318 1.313C10.766 11.729 9.464 12 8 12s-2.766-.27-3.682-.687C3.356 10.875 3 10.373 3 10V8.698c.271.202.58.378.904.525C4.978 9.71 6.427 10 8 10s3.022-.289 4.096-.777A5 5 0 0 0 13 8.698m0 3V13c0 .374-.356.875-1.318 1.313C10.766 14.729 9.464 15 8 15s-2.766-.27-3.682-.687C3.356 13.875 3 13.373 3 13v-1.302c.271.202.58.378.904.525C4.978 12.71 6.427 13 8 13s3.022-.289 4.096-.777c.324-.147.633-.323.904-.525"/>
                                               </svg>
@@ -128,7 +141,7 @@
 										    </div>
 										</div>
 										<!-- 사용여부 선택하세여 모달창 -->
-										<div class="modal" id="codeGroupYNModal" role="dialog">
+										<!-- <div class="modal" id="codeGroupYNModal" role="dialog">
                                             <div  class="modal-dialog" role="document">
 										        <div class="modal-content">
 										             <div class="modal-body">사용여부를 선택하세요
@@ -139,7 +152,30 @@
                         								</div>
 										         </div>
 										    </div>
-										</div>
+										</div> -->
+										
+										<!-- 삭제 모달 -->
+											<div class="modal fade" id="modalConfirm" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+												<div class="modal-dialog modal-dialog-centered">
+													<div class="modal-content">
+														<div class="modal-header">
+															<h5 class="modal-title" id="modalConfirmTitle">title</h5>
+															<!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">??</button> -->
+														</div>
+														<div class="modal-body" id="modalConfirmBody">
+															body
+														</div>
+														<div class="modal-footer">
+															<!-- <button type="button" class="btn btn-outline-secondary btn-sm btn_custom" data-bs-dismiss="modal"></button> -->
+															<!-- <button type="button" class="btn btn-danger btn-sm btn_custom" name="" id="btnModalDelete">영구삭제</button> -->
+															<button type="button" class="btn btn-sm btn_custom" name="" id="" href="#">닫기</button>
+															<button type="button" class="btn btn-danger btn-sm btn_custom" name="" id="btnModalUelete">삭제</button>
+														</div>
+													</div>
+												</div>
+											</div>
+											
+										<!-- 삭제모달 AND -->
                                        
                                        
                                     </div>
@@ -157,7 +193,25 @@
         </div>
     </section>
 </form>
+<script type="text/javascript">
 
+	if(document.getElementById("btnUelete")){
+		document.getElementById("btnUelete").onclick = function () {
+			document.querySelector("#modalConfirmTitle").textContent = "확 인";
+			document.querySelector("#modalConfirmBody").textContent = "해당 데이터를 삭제하시겠습니까 ?";
+			document.querySelector("#btnModalUelete").style.display = '';
+			/* document.querySelector("#btnModalDelete").style.display = 'none'; */
+			$("#modalConfirm").modal("show");      	
+		}
+	}
+	
+	
+	document.getElementById("btnModalUelete").onclick = function () {
+		form.action = "/codeGroup/codeGroupUele";
+		form.submit();
+	}
+
+</script>
 
 
 
@@ -170,43 +224,53 @@
 	
 	
 	
+
+	
  
-	document.getElementById("btuSave").onclick = function() {
-		
-		// 코드그룹이름 확인 눌렀을때
-		
-			 if(ifcgName.value.trim() == ""){
-				 document.getElementById("codeGroupNameModal").style.display = "block";
-			
-				ifcgName.focus();
-			
-				return false;
-			 }
-		
-		
-			 if(usedOrNot.value.trim() == ""){
-				 document.getElementById("codeGroupYNModal").style.display = "block";
-			
-				 usedOrNot.focus();
-			
-				return false;
-			 }
-		
-			 document.getElementById("form").submit();
-	
+	document.getElementById("btnSubmit").onclick = function() {
+	    let seq = document.querySelector("input[name=cdgSeq]");
+	    let ifcgName = document.querySelector("input[name=ifcgName]"); // ifcgName 필드 정의
+
+	    function validationInst() {
+		    if(validationUpdt() == false) return false;
+		}
+
+	    function validationUpdt() {
+	        let isValid = true;
+	        
+	        let seq = document.querySelector("input[name=cdgSeq]");
+	        if (seq.value == "") {
+	            isValid = false;
+	        }
+	        return isValid;
+	    }
+
+	    // 코드그룹 이름이 비어있는 경우 모달 표시
+	    if (ifcgName.value.trim() == "") {
+	        document.getElementById("codeGroupNameModal").style.display = "block";
+	        ifcgName.focus();
+	        return false; // 폼 제출을 막고 모달을 띄운 상태로 유지
+	    }
+
+	    // 유효성 검사 후 폼 제출
+	    if (seq.value == "0" || seq.value == "") {
+	        if (validationInst() == false) return false;
+	        form.action = "/codeGroup/codeGroupInst"; // 새로 생성하는 폼에 대한 액션
+	        form.submit();
+	    } else {
+	        if (validationUpdt() == false) return false;
+	        form.action = "/codeGroup/codeGroupUpdt"; // 수정하는 폼에 대한 액션
+	        form.submit();
+	    }
 	}
-	
+
+	// 코드그룹 이름 확인 눌렀을 때 모달 닫기
 	document.getElementById("check").onclick = function() {
-		
-		 document.getElementById("codeGroupNameModal").style.display = "none";
-		 ifcgName.focus();
+	    document.getElementById("codeGroupNameModal").style.display = "none";
+	    ifcgName.focus(); // 코드그룹 이름 입력 필드에 포커스
 	}
 	
-	document.getElementById("check1").onclick = function() {
-		
-		 document.getElementById("codeGroupYNModal").style.display = "none";
-		 ifcgName.focus();
-	}
+	/* document.getElementById("form").submit();   */
 	
 	
 </script>
